--- a/testing.yml
+++ b/testing.yml
@@ -4,6 +4,6 @@
   tasks:
     - name: create a user
       user:
-        name: Amir
+        name: "{{ item }}"
         state: present 
- 
+      loop: "{{ nm }}"
